--- a/p8105_hw3_jy3269.Rmd
+++ b/p8105_hw3_jy3269.Rmd
@@ -9,3 +9,145 @@ output: github_document
 library(tidyverse)
 library(p8105.datasets)
 ```
+
+## Problem 2
+
+### 1. import csv file
+```{r}
+data_1 <- read_csv("./data/accel_data.csv")
+data_1
+
+```
+
+### 2. clean and wrangle data
+
+```{r}
+acc_1 <- data_1 %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    week = as.integer(week),
+    day_id = as.integer(day_id),
+    weekday_vs_weekend = if_else(day == "Saturday" | day == "Sunday","weekend","weekday") # new variable indicate whether the day is weekend or weekday
+  ) %>% 
+  pivot_longer(                          # switch the data set from wider to longer
+    activity_1:activity_1440,
+    names_to = "minute",                 # activity_number in previous column names indicate the minute       
+    names_prefix = "activity_",          # remove the activity_ prefix and preserve the number
+    values_to = "activity_counts") %>%   # store the observed data in a new column names activity_counts
+  mutate(minute = as.integer(minute))    # change the data class
+
+acc
+```
+
+```{r}
+acc_2 <- data_1 %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    week = as.integer(week),
+    day_id = as.integer(day_id),
+    weekday_vs_weekend = if_else(day == "Saturday" | day == "Sunday","weekend","weekday") # new variable indicate whether the day is weekend or weekday
+  ) %>% 
+  select(week,day_id,day,weekday_vs_weekend,everything())
+
+acc_2
+
+```
+
+
+
+## 3. total activity each day
+```{r}
+acc_2 <- acc_2 %>% 
+  group_by(day_id) %>% 
+  mutate(total_activity = sum(activity_1:activity_1440)) %>%     # add a column to store the daily sum
+  select(week,day_id,day,weekday_vs_weekend,total_activity,everything()) # show the new column at the front
+
+acc_2
+```
+
+```{r}
+
+
+```
+
+```{r}
+acc_2 <- data_1 %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    week = as.integer(week),
+    day_id = as.integer(day_id),
+    weekday_vs_weekend = if_else(day == "Saturday" | day == "Sunday","weekend","weekday") # new variable indicate whether the day is weekend or weekday
+  ) %>% 
+  select(week,day_id,day,weekday_vs_weekend,everything())
+
+acc_2
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+```{r}
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
