--- a/p8105_hw3_jy3269.Rmd
+++ b/p8105_hw3_jy3269.Rmd
@@ -36,7 +36,7 @@ acc_1 <- data_1 %>%
     values_to = "activity_counts") %>%   # store the observed data in a new column names activity_counts
   mutate(minute = as.integer(minute))    # change the data class
 
-acc
+acc_1
 ```
 
 ```{r}
@@ -55,38 +55,55 @@ acc_2
 
 
 
-## 3. total activity each day
+### 3. total activity each day
 ```{r}
-acc_2 <- acc_2 %>% 
+acc_2 %>% 
   group_by(day_id) %>% 
   mutate(total_activity = sum(activity_1:activity_1440)) %>%     # add a column to store the daily sum
   select(week,day_id,day,weekday_vs_weekend,total_activity,everything()) # show the new column at the front
 
-acc_2
 ```
 
-```{r}
-
-
-```
 
 ```{r}
-acc_2 <- data_1 %>% 
-  janitor::clean_names() %>% 
-  mutate(
-    week = as.integer(week),
-    day_id = as.integer(day_id),
-    weekday_vs_weekend = if_else(day == "Saturday" | day == "Sunday","weekend","weekday") # new variable indicate whether the day is weekend or weekday
-  ) %>% 
-  select(week,day_id,day,weekday_vs_weekend,everything())
-
-acc_2
+acc_1 %>% 
+  group_by(day_id) %>% 
+  mutate(total_activity = sum(activity_counts))     # add a column to store the daily sum
 
 ```
 
+
+
+
+### 4. make a table
+
 ```{r}
+acc_2 %>% 
+  group_by(day_id) %>% 
+  summarize(total_activity = sum(activity_1:activity_1440)) %>% 
+  knitr::kable()    # make an r table
+
+```
 
 
+```{r}
+acc_1 %>% 
+  group_by(day_id) %>% 
+  summarize(total_activity = sum(activity_counts)) %>% 
+  knitr::kable()    # make an r table
+
+```
+
+
+
+
+### 5. plot daily activity
+```{r}
+acc_1 %>%  
+  group_by(day_id) %>%
+  ggplot(aes(x=minute,y=activity_counts,color=day))+
+  geom_point()+geom
+  
 ```
 
 ```{r}
