--- a/p8105_hw3_jy3269.Rmd
+++ b/p8105_hw3_jy3269.Rmd
@@ -43,14 +43,16 @@ acc_1
 Description:
 
 *  structure of the data set:
-  * the acc_1
-
+  * the `acc_1` data set has  `r nrow(acc_1)` rows (observations) and `r ncol(acc_1)` columns (variables)
+  * the variables in `acc_1` include : `r names(acc_1)`
+  * the `weekday_vs_weekend` variable is a new one added to the original data set, showing whether the day is a weekday or a weekend.
+  * the original data set `data_1` has `r ncol(data_1)` variables. The last 1440 columns are the activity counts of each minute in a day. 
+  * We used `pivot_longer` to transform the 1440 columns to store the data in a new variable named `activity_counts` and specify the minute each data belongs to in a new variable named `minute`.
 
 
 
 
 ### 3. total activity each day
-
 
 ```{r}
 acc_1 %>% 
