--- a/p8105_hw3_jy3269.Rmd
+++ b/p8105_hw3_jy3269.Rmd
@@ -182,7 +182,7 @@ noaa <- ny_noaa %>%
     month = month.name[as.integer(month)],
     prcp = prcp / 10,
     tmax = as.numeric(tmax) / 10, 
-    tmin = as.numeric(tmin) / 10
+    tmin = as.numeric(tmin) / 10    # switch to proper units
     )
 noaa
 ```
@@ -212,16 +212,28 @@ One reason for this is that winter only takes up a small proportion of the time 
 Another supplementary reason why New York does not snow very often even in winter is that the climate of New York state is humid continental. The average winter temperature is below 0 during January and February in most cities in the state. But it is usually several degrees above 0 along the Atlantic coastline, including New York City, making it hard to snow.
 
 
+
+
 ### 4. plot mean tmax
 ```{r}
-ny_noaa %>% 
-  filter(month == c(7)) %>% 
-  group_by(id) %>% 
-  mutate(mean_tmax = mean(tmax,na.rm = TRUE)) %>% 
-  ggplot(aes(y = mean_tmax,fill = year))+
-  geom_histogram()
+noaa %>%
+  filter(month == 'January' | month == 'July') %>%
+  group_by(month, id, year) %>%
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE)) %>%
+  ggplot(aes(x = year, y = mean_tmax, color = month)) +
+  geom_point(alpha = .2) +
+  geom_smooth(se = F,color="black") +
+  facet_grid(~month) +
+  labs(x = "Year",
+       y = "Average Max Temperature (C)",
+       title = "Average Max Temperature in January and July") +
+  theme_bw() +
+  theme(legend.position = "bottom")
 
 ```
+
+
+
 
 ```{r}
 
