--- a/p8105_hw3_jy3269.md
+++ b/p8105_hw3_jy3269.md
@@ -195,7 +195,6 @@ head(acc_1)
 
 **Description**:
 
--   structure of the data set:
 -   the `acc_1` data set has 50400 rows (observations) and 6 columns
     (variables)
 -   the variables in `acc_1` include : week, day_id, day,
@@ -403,6 +402,7 @@ noaa
 -   `noaa` has 2595176 rows and 9 columns.
 -   The variables in `noaa` are : id, year, month, day, prcp, snow,
     snwd, tmax, tmin
+-   The key variables are `prcp` `snow` `snwd` `tmax` and `tmin`
 -   the units of precipitation, min and max temperature are adjusted.
 
 ### 3. snowfall
@@ -488,17 +488,17 @@ noaa %>%
 ## 5. plot tmax vs tmin + distribution of snowfall
 
 ``` r
-tmax_tmin_plot <-                       # tmax vs tmin
+tmax_tmin_plot <-                         # tmax vs tmin
   noaa %>% 
   ggplot(aes(x = tmax,y = tmin)) +
-  geom_hex() +                          # use a hexagon plot
+  geom_hex() +                            # use a hexagon plot
   geom_smooth(se = FALSE,na.rm = TRUE) +
   labs(x = "tmax(C)",y = "tmin(C)",title = "tmax vs tmin") +
   theme(legend.text = element_text(size = 8),
-        legend.key.width=unit(1,'cm'))
+        legend.key.width = unit(1,'cm'))  # set the legend text size and width
 
   
-snow_density_plot <-                    # snow density
+snow_density_plot <-                      # snow density
   noaa %>% 
   filter(snow > 0 & snow < 100) %>% 
   mutate(year = factor(year)) %>% 
